--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "openai": "^4.47.1",
     "path": "^0.12.7",
     "rand-token": "^1.0.1",
-    "uuid": "^9.0.1"
+    "uuid": "^9.0.1",
+    "winston": "^3.13.0",
+    "winston-daily-rotate-file": "^5.0.0"
   }
 }
